--- a/index.html
+++ b/index.html
@@ -1,3 +1,11 @@
+<style>
+body {
+  background-image: url('https://media.tenor.com/ypAFp65sE-sAAAAd/roblox-dancing.gif');
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: 100% 100%;
+}
+</style>
 <!DOCTYPE HTML>
 <html>
 <head>
